--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"axios": "^0.25.0",
 		"chart.js": "^3.7.0",
 		"flipkart": "file:..",
+		"js-cookie": "^3.0.5",
 		"notistack": "^2.0.3",
 		"react": "^17.0.2",
 		"react-chartjs-2": "^4.0.1",
